--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
   </tr>
   <tr>
     <td>RealHRsoft Static Website</td>
-    <td>wwww</td>
-    <td>wwww</td>
+    <td><a href="https://razeen1.github.io/aayulogic/realhrstatic">https://razeen1.github.io/aayulogic/realhrstatic</a></td>
+    <td><a href="https://github.com/Razeen1/aayulogic">https://github.com/Razeen1/aayulogic</a></td>
   </tr>
   
 </table>
