--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
   <tr>
     <td>RealHRsoft Static Website</td>
     <td><a href="https://razeen1.github.io/aayulogic/realhrstatic">https://razeen1.github.io/aayulogic/realhrstatic</a></td>
-    <td><a href="https://github.com/Razeen1/aayulogic">https://github.com/Razeen1/aayulogic</a></td>
+    <td><a href="https://github.com/Razeen1/aayulogic/tree/main/realhrstatic">https://github.com/Razeen1/aayulogic/tree/main/realhrstatic</a></td>
   </tr>
   
 </table>
