--- a/realhrstatic/index.html
+++ b/realhrstatic/index.html
@@ -4,6 +4,7 @@
 <meta http-equiv='X-UA-Compatible' content='IE=edge'>
 <title>Online Hr Software and Solutions</title>
 <meta name='viewport' content='width=device-width, initial-scale=1'>
+<link rel="shortcut icon" href="favicon.ico" type="image/x-icon">  
 <link href='https://fonts.googleapis.com/css?family=Poppins' rel='stylesheet'>
 <link rel='stylesheet' type='text/css' media='screen' href='main.css'>
 <script src='main.js'></script>
