--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 </head>
 <body>
 
-<h1>Projetcs</h1>
+<h1>Projects</h1>
 
 <table id="customers">
   <tr>
@@ -41,6 +41,12 @@
     <td><a href="https://razeen1.github.io/aayulogic/realhrstatic">https://razeen1.github.io/aayulogic/realhrstatic</a></td>
     <td><a href="https://github.com/Razeen1/aayulogic/tree/main/realhrstatic">https://github.com/Razeen1/aayulogic/tree/main/realhrstatic</a></td>
   </tr>
+  <tr>
+    <td>LMS Static Website</td>
+    <td><a href="https://razeen1.github.io/aayulogic/lms/">https://razeen1.github.io/aayulogic/lms/</a></td>
+    <td><a href="https://github.com/Razeen1/aayulogic/tree/main/lms">https://github.com/Razeen1/aayulogic/tree/main/lms</a></td>
+  </tr>
+  
   
 </table>
 </body>
