--- a/lms/index.html
+++ b/lms/index.html
@@ -15,7 +15,7 @@
     <div class="navtop">
         <div class="navtopleft">
             <div class="navtopitems">+01 11123</div>
-            <div class="navtopitems">mail@lms.com/div>
+            <div class="navtopitems">mail@lms.com</div>
         </div>
         <div class="navtopleft">
             <div class="navtopitems">Register</div>
