--- a/lms/index.html
+++ b/lms/index.html
@@ -8,20 +8,237 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <link href="https://fonts.cdnfonts.com/css/roboto" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel='stylesheet' type='text/css' media='screen' href='style.css'>
 </head>
 
 <body>
     <div class="navtop">
         <div class="navtopleft">
-            <div class="navtopitems">+01 11123</div>
-            <div class="navtopitems">mail@lms.com</div>
+            <div class="navtopitems"><img src="./images/phone.png" width="20px" height="20px"> +01 11123</div>
+            <div class="navtopitems"><img src="./images/mail.png" width="20px" height="20px"> mail@lms.com</div>
         </div>
         <div class="navtopleft">
-            <div class="navtopitems">Register</div>
-            <div class="navtopitems">Login</div>
+            <div class="navtopitems"><img src="./images/user.png" width="20px" height="20px"> Register</div>
+            <div class="navtopitems"><img src="./images/enter.png" width="20px" height="20px"> Login</div>
         </div>
     </div>
+    <div class="divnav">
+        <div class="navbar">
+            <h5>LMS</h5>
+            <ul class="navitems">
+                <li class="selected"><a href="#">Home</a></li>
+                <li><a href="#">About</a></li>
+                <li><a href="#">Features</a></li>
+                <li><a href="#">Blog</a></li>
+                <li><a href="#">FAQ</a></li>
+                <li><a href="#">Contact</a></li>
+            </ul>
+        </div>
+    </div>
+    <div class="herobanner">
+        <img src="hero.jpg">
+        <div class="herotext">
+            <h1> Improve Your Skill<br>
+                Excellence<br>
+                In Teaching</h1>
+            <!-- <img src="./images/herobanner.jpg" width="200" height="200"> -->
+            <p>
+                An exciting was to learn and teach <br>
+                Come join us with this fun filled adventure
+            </p>
+            <button>
+                Apply Now
+            </button>
+        </div>
+
+    </div>
+    <div class="choose">
+        <h1>Why Choose Us?</h1>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. <br>Quidem impedit, doloremque aliquid veritatis
+            iure dicta adipisci. <br>Aspernatur at, aperiam veniam </p>
+        <div class="functiontile">
+            <div class="functiontileitems">
+                <div class="imgfun"><img src="./images/virtual-assistant.png" /></div>
+                <div class="funtxt">
+                    <h6>
+                        Virtual Classes
+                    </h6>
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci assumenda cumque libero quae
+                        quas? Facere voluptate
+                    </p>
+                </div>
+            </div>
+            <div class="functiontileitems">
+                <div class="imgfun"><img src="./images/test.png" /></div>
+                <div class="funtxt">
+                    <h6>
+                        Test
+                    </h6>
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci assumenda cumque libero quae
+                        quas? Facere voluptate
+                    </p>
+                </div>
+            </div>
+            <div class="functiontileitems">
+                <div class="imgfun"><img src="./images/certificate.png" /></div>
+                <div class="funtxt">
+                    <h6>
+                        Certification
+                    </h6>
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci assumenda cumque libero quae
+                        quas? Facere voluptate
+                    </p>
+                </div>
+            </div>
+            <div class="functiontileitems">
+                <div class="imgfun"><img src="./images/customer-support.png" /></div>
+                <div class="funtxt">
+                    <h6>
+                        Support
+                    </h6>
+                    <p>
+                        ALorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci assumenda cumque libero quae
+                        quas? Facere voluptate
+                        Why Choose Us? </p>
+                </div>
+            </div>
+
+        </div>
+
+    </div>
+    <div class="courses">
+        <div class="innercourses">
+            <h1>What do you want to master?</h1>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quidem impedit, doloremque aliquid veritatis
+                iure dicta adipisci. <br>Aspernatur at, aperiam veniam </p>
+        </div>
+        <div class="coursestile">
+            <div class="coursestileitems">
+                <div class="imgcourse"><img src="./images/flask.png" /></div>
+                <div class="funtxt">
+                    <h6>
+                        Graphics Design
+                    </h6>
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci assumenda cumque libero quae
+                        quas? Facere voluptate
+                    </p>
+                </div>
+            </div>
+            <div class="coursestileitems">
+                <div class="imgcourse"><img src="./images/flask.png" /></div>
+                <div class="funtxt">
+                    <h6>
+                        Chemistry
+                    </h6>
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci assumenda cumque libero quae
+                        quas? Facere voluptate
+                    </p>
+                </div>
+            </div>
+            <div class="coursestileitems">
+                <div class="imgcourse"><img src="./images/flask.png" /></div>
+                <div class="funtxt">
+                    <h6>
+                        Maths
+                    </h6>
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci assumenda cumque libero quae
+                        quas? Facere voluptate
+                    </p>
+                </div>
+            </div>
+            <div class="coursestileitems">
+                <div class="imgcourse"><img src="./images/flask.png" /></div>
+                <div class="funtxt">
+                    <h6>
+                        Programming
+                    </h6>
+                    <p>
+                        ALorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci assumenda cumque libero quae
+                        quas? Facere voluptate
+                    </p>
+                </div>
+            </div>
+
+        </div>
+        
+    </div>
+    <div class="latestcourses">
+        <div class="innerlatest">
+            <h1>Latest Courses</h1>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quidem impedit, doloremque aliquid veritatis
+                iure dicta adipisci. <br>Aspernatur at, aperiam veniam </p>
+        </div>
+        <div class="needcardall">
+            <div class="needcard">
+                <img src="./images/teacher.jpg" width="150px" height="150px">
+                <div class="price">
+                   <div class="priceinner"><h4>$500</h4></div> 
+                   <div class="priceinner">
+                     <span class="fa fa-star checked"></span>
+                    <span class="fa fa-star checked"></span>
+                    <span class="fa fa-star checked"></span>
+                    <span class="fa fa-star"></span>
+                    <span class="fa fa-star"></span></div>
+                </div>
+                <h5>Mathematics</h5>
+
+                <p>
+                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Porro voluptatibus
+                </p>
+                <button>
+                    Take courses
+                </button>
+            </div>
+
+            <div class="needcard">
+                <img src="./images/teacher1.jpeg" width="150px" height="150px">
+                <div class="price">
+                    <div class="priceinner"><h4>$500</h4></div> 
+                    <div class="priceinner">
+                      <span class="fa fa-star checked"></span>
+                     <span class="fa fa-star checked"></span>
+                     <span class="fa fa-star checked"></span>
+                     <span class="fa fa-star"></span>
+                     <span class="fa fa-star"></span></div>
+                 </div>
+                <h5>Fashion Designing</h5>
+                <p>
+                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Porro voluptatibus
+                </p>
+                <button>
+                    Take courses
+                </button>
+            </div>
+            <div class="needcard">
+                <img src="./images/teacher2.jpeg" width="150px" height="150px">
+                <div class="price">
+                    <div class="priceinner"><h4>$500</h4></div> 
+                    <div class="priceinner">
+                      <span class="fa fa-star checked"></span>
+                     <span class="fa fa-star checked"></span>
+                     <span class="fa fa-star checked"></span>
+                     <span class="fa fa-star"></span>
+                     <span class="fa fa-star"></span></div>
+                 </div>
+                <h5>Front-End Development</h5>
+                <p>
+                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Porro voluptatibus
+                </p>
+                <button>
+                    Take courses
+                </button>
+            </div>
+        </div>
+    </div>
+
+
 </body>
 
 </html>
