--- a/lms/index.html
+++ b/lms/index.html
@@ -237,7 +237,22 @@
             </div>
         </div>
     </div>
-
+    <div class="review">
+        <div class="reviewinner">
+        <div class="reviewtext">
+            <h5>Welcome to</h5>
+            <h1>Live Class</h1>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Perferendis facere alias atque, suscipit eos illum asperiores laboriosam nobis rem qui, est natus minima, adipisci aut id similique tenetur vero doloremque.</p>
+            <button>
+                View All Classes
+            </button>
+        </div>
+        <div class="reviewcard">
+            
+            <img src="./images/learn.png">
+        </div>
+    </div>
+    </div>
 
 </body>
 
