--- a/lms/index.html
+++ b/lms/index.html
@@ -288,7 +288,7 @@
             <div class="newscard">
                 <img src="./images/news.jpg" width="150px" height="150px">
                 <h6>25th may 2020</h6>
-                <h5>Motivated studemts lead to Successful Projects </h5>
+                <h5>Motivated students lead to Successful Nations </h5>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum ullam temporibus, minus autem .</p>
             </div>
         </div>
