main index updated

--- a/index.html
+++ b/index.html
@@ -46,6 +46,11 @@
     <td><a href="https://razeen1.github.io/aayulogic/lms/">https://razeen1.github.io/aayulogic/lms/</a></td>
     <td><a href="https://github.com/Razeen1/aayulogic/tree/main/lms">https://github.com/Razeen1/aayulogic/tree/main/lms</a></td>
   </tr>
+  <tr>
+    <td>Java Script Text Util</td>
+    <td><a href="https://razeen1.github.io/aayulogic/textutil/">https://razeen1.github.io/aayulogic/textutil/</a></td>
+    <td><a href="https://github.com/Razeen1/aayulogic/tree/main/textutil">https://github.com/Razeen1/aayulogic/tree/main/textutil</a></td>
+  </tr>
   
   
 </table>
