Hang man With index

--- a/index.html
+++ b/index.html
@@ -28,6 +28,11 @@
     <td><a href="https://razeen1.github.io/aayulogic/textutil/">https://razeen1.github.io/aayulogic/textutil/</a></td>
     <td><a href="https://github.com/Razeen1/aayulogic/tree/main/textutil">https://github.com/Razeen1/aayulogic/tree/main/textutil</a></td>
   </tr>
+  <tr>
+    <td>Hang Man</td>
+    <td><a href="https://razeen1.github.io/aayulogic/hangman/">https://razeen1.github.io/aayulogic/hangman/</a></td>
+    <td><a href="https://github.com/Razeen1/aayulogic/tree/main/hangman">https://github.com/Razeen1/aayulogic/tree/main/hangman</a></td>
+  </tr>
   
   
 </table>
