--- a/index.html
+++ b/index.html
@@ -1,40 +1,82 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <link rel='stylesheet' type='text/css' media='screen' href='style.css'>
-</head>
-<body>
+  <head>
+    <link rel="stylesheet" type="text/css" media="screen" href="style.css" />
+  </head>
+  <body>
+    <h1>Projects</h1>
 
-<h1>Projects</h1>
-
-<table id="customers">
-  <tr>
-    <th>Project Name</th>
-    <th>Demo</th>
-    <th>Code</th>
-  </tr>
-  <tr>
-    <td>RealHRsoft Static Website</td>
-    <td><a href="https://razeen1.github.io/aayulogic/realhrstatic">https://razeen1.github.io/aayulogic/realhrstatic</a></td>
-    <td><a href="https://github.com/Razeen1/aayulogic/tree/main/realhrstatic">https://github.com/Razeen1/aayulogic/tree/main/realhrstatic</a></td>
-  </tr>
-  <tr>
-    <td>LMS Static Website</td>
-    <td><a href="https://razeen1.github.io/aayulogic/lms/">https://razeen1.github.io/aayulogic/lms/</a></td>
-    <td><a href="https://github.com/Razeen1/aayulogic/tree/main/lms">https://github.com/Razeen1/aayulogic/tree/main/lms</a></td>
-  </tr>
-  <tr>
-    <td>Java Script Text Util</td>
-    <td><a href="https://razeen1.github.io/aayulogic/textutil/">https://razeen1.github.io/aayulogic/textutil/</a></td>
-    <td><a href="https://github.com/Razeen1/aayulogic/tree/main/textutil">https://github.com/Razeen1/aayulogic/tree/main/textutil</a></td>
-  </tr>
-  <tr>
-    <td>Hang Man</td>
-    <td><a href="https://razeen1.github.io/aayulogic/hangman/">https://razeen1.github.io/aayulogic/hangman/</a></td>
-    <td><a href="https://github.com/Razeen1/aayulogic/tree/main/hangman">https://github.com/Razeen1/aayulogic/tree/main/hangman</a></td>
-  </tr>
-  
-  
-</table>
-</body>
+    <table id="customers">
+      <tr>
+        <th>Project Name</th>
+        <th>Demo</th>
+        <th>Code</th>
+      </tr>
+      <tr>
+        <td>RealHRsoft Static Website</td>
+        <td>
+          <a href="https://razeen1.github.io/aayulogic/realhrstatic"
+            >https://razeen1.github.io/aayulogic/realhrstatic</a
+          >
+        </td>
+        <td>
+          <a href="https://github.com/Razeen1/aayulogic/tree/main/realhrstatic"
+            >https://github.com/Razeen1/aayulogic/tree/main/realhrstatic</a
+          >
+        </td>
+      </tr>
+      <tr>
+        <td>LMS Static Website</td>
+        <td>
+          <a href="https://razeen1.github.io/aayulogic/lms/"
+            >https://razeen1.github.io/aayulogic/lms/</a
+          >
+        </td>
+        <td>
+          <a href="https://github.com/Razeen1/aayulogic/tree/main/lms"
+            >https://github.com/Razeen1/aayulogic/tree/main/lms</a
+          >
+        </td>
+      </tr>
+      <tr>
+        <td>Java Script Text Util</td>
+        <td>
+          <a href="https://razeen1.github.io/aayulogic/textutil/"
+            >https://razeen1.github.io/aayulogic/textutil/</a
+          >
+        </td>
+        <td>
+          <a href="https://github.com/Razeen1/aayulogic/tree/main/textutil"
+            >https://github.com/Razeen1/aayulogic/tree/main/textutil</a
+          >
+        </td>
+      </tr>
+      <tr>
+        <td>Hang Man</td>
+        <td>
+          <a href="https://razeen1.github.io/aayulogic/hangman/"
+            >https://razeen1.github.io/aayulogic/hangman/</a
+          >
+        </td>
+        <td>
+          <a href="https://github.com/Razeen1/aayulogic/tree/main/hangman"
+            >https://github.com/Razeen1/aayulogic/tree/main/hangman</a
+          >
+        </td>
+      </tr>
+      <tr>
+        <td>Image Carousel Api</td>
+        <td>
+          <a href="https://razeen1.github.io/aayulogic/imageCarousel/"
+            >https://razeen1.github.io/aayulogic/imageCarousel/</a
+          >
+        </td>
+        <td>
+          <a href="https://github.com/Razeen1/aayulogic/tree/main/imageCarousel"
+            >https://github.com/Razeen1/aayulogic/tree/main/imageCarousel</a
+          >
+        </td>
+      </tr>
+    </table>
+  </body>
 </html>
