--- a/imageCarousel/index.html
+++ b/imageCarousel/index.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link href="https://fonts.cdnfonts.com/css/roboto" rel="stylesheet" />
     <link rel="stylesheet" type="text/css" media="screen" href="style.css" />
-    <title>Document</title>
+    <title>Image Carousel</title>
   </head>
   <body>
     <script src="main.js"></script>
