Main Index added

--- a/index.html
+++ b/index.html
@@ -77,6 +77,17 @@
           >
         </td>
       </tr>
+      <tr>
+        <td>Vue</td>
+        <td>
+          <a href="helloaayulogic.netlify.app/">helloaayulogic.netlify.app/</a>
+        </td>
+        <td>
+          <a href="https://github.com/Razeen1/aayulogic/tree/main/hello-world"
+            >https://github.com/Razeen1/aayulogic/tree/main/hello-world</a
+          >
+        </td>
+      </tr>
     </table>
   </body>
 </html>
