Main Index added

--- a/index.html
+++ b/index.html
@@ -80,7 +80,9 @@
       <tr>
         <td>Vue</td>
         <td>
-          <a href="helloaayulogic.netlify.app/">helloaayulogic.netlify.app/</a>
+          <a href="https://helloaayulogic.netlify.app/"
+            >helloaayulogic.netlify.app/</a
+          >
         </td>
         <td>
           <a href="https://github.com/Razeen1/aayulogic/tree/main/hello-world"
