--- a/index.html
+++ b/index.html
@@ -80,13 +80,11 @@
       <tr>
         <td>Vue</td>
         <td>
-          <a href="https://helloaayulogic.netlify.app/"
-            >helloaayulogic.netlify.app/</a
-          >
+          <a href="https://helloaayulogic.netlify.app/">Portfolio</a>
         </td>
         <td>
-          <a href="https://github.com/Razeen1/aayulogic/tree/main/hello-world"
-            >https://github.com/Razeen1/aayulogic/tree/main/hello-world</a
+          <a href="https://github.com/Razeen1/aayulogic/tree/main/portfolio"
+            >https://github.com/Razeen1/aayulogic/tree/main/portfolio</a
           >
         </td>
       </tr>
