--- a/portfolio/public/index.html
+++ b/portfolio/public/index.html
@@ -5,9 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width,initial-scale=1.0" />
     <link rel="icon" href="<%= BASE_URL %>favicon.ico" />
-    <title>
-      Portfolio-Rajin Bhuju <!-- <%= htmlWebpackPlugin.options.title %> -->
-    </title>
+    <title>Portfolio-Rajin Bhuju</title>
   </head>
   <body>
     <noscript>
